Hovering function now working, need to finish the functionality of the play/pause button

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
 
 		<a href="#" class="left" onclick="prev()">Previous</a>
 		<a href="#" class="right" onclick="next()">Next</a>
-		<a href="#" id="stop" onclick="stopLoop()">Stop</a>
-		<a href="#" id="resume" onclick="startSlider()">Resume</a>
+
+		<div id="button">
+			<img id="play-pause" src="images/play-pause.png">
+		</div>
 
 	</div>
 
