Functionality has been added to the play/pause button, but there's a conflict between this and the hovering on the images

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 		<a href="#" class="left" onclick="prev()">Previous</a>
 		<a href="#" class="right" onclick="next()">Next</a>
 
-		<div id="button">
-			<img id="play-pause" src="images/play-pause.png">
+		<div id="button-stop">
+			<img id="play-pause" src="images/play-pause.png"> 
 		</div>
 
 	</div>
